--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: index
 ---
-<ul>
+<ul class="index">
   {% for post in site.posts %}
   <li>
     <a href="{{ post.url }}">{{ post.title }}</a>
